練習用prop從父元素帶東西給子元素

--- a/Computer.css
+++ b/Computer.css
@@ -57,3 +57,9 @@ a:hover{
 	color: black;
 	background-color: white;
 }
+.stateClass{
+	/*border: solid 1px black;*/
+	margin-top: 20px;
+	display: flex;
+	justify-content: space-around;
+}
